--- a/Example/PLPaymentGateway.xcodeproj/xcshareddata/xcschemes/PLPaymentGatewayPod-Example.xcscheme
+++ b/Example/PLPaymentGateway.xcodeproj/xcshareddata/xcschemes/PLPaymentGatewayPod-Example.xcscheme
@@ -15,9 +15,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "607FACCF1AFB9204008FA782"
-               BuildableName = "PLPaymentGatewayPod_Example.app"
-               BlueprintName = "PLPaymentGatewayPod_Example"
-               ReferencedContainer = "container:PLPaymentGatewayPod.xcodeproj">
+               BuildableName = "PLPaymentGateway_Example.app"
+               BlueprintName = "PLPaymentGateway_Example"
+               ReferencedContainer = "container:PLPaymentGateway.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
          <BuildActionEntry
@@ -29,9 +29,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "607FACE41AFB9204008FA782"
-               BuildableName = "PLPaymentGatewayPod_Tests.xctest"
-               BlueprintName = "PLPaymentGatewayPod_Tests"
-               ReferencedContainer = "container:PLPaymentGatewayPod.xcodeproj">
+               BuildableName = "PLPaymentGateway_Tests.xctest"
+               BlueprintName = "PLPaymentGateway_Tests"
+               ReferencedContainer = "container:PLPaymentGateway.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -40,37 +40,33 @@
       buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
-      language = ""
       shouldUseLaunchSchemeArgsEnv = "YES">
+      <MacroExpansion>
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "607FACCF1AFB9204008FA782"
+            BuildableName = "PLPaymentGateway_Example.app"
+            BlueprintName = "PLPaymentGateway_Example"
+            ReferencedContainer = "container:PLPaymentGateway.xcodeproj">
+         </BuildableReference>
+      </MacroExpansion>
       <Testables>
          <TestableReference
             skipped = "NO">
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "607FACE41AFB9204008FA782"
-               BuildableName = "PLPaymentGatewayPod_Tests.xctest"
-               BlueprintName = "PLPaymentGatewayPod_Tests"
-               ReferencedContainer = "container:PLPaymentGatewayPod.xcodeproj">
+               BuildableName = "PLPaymentGateway_Tests.xctest"
+               BlueprintName = "PLPaymentGateway_Tests"
+               ReferencedContainer = "container:PLPaymentGateway.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
-      <MacroExpansion>
-         <BuildableReference
-            BuildableIdentifier = "primary"
-            BlueprintIdentifier = "607FACCF1AFB9204008FA782"
-            BuildableName = "PLPaymentGatewayPod_Example.app"
-            BlueprintName = "PLPaymentGatewayPod_Example"
-            ReferencedContainer = "container:PLPaymentGatewayPod.xcodeproj">
-         </BuildableReference>
-      </MacroExpansion>
-      <AdditionalOptions>
-      </AdditionalOptions>
    </TestAction>
    <LaunchAction
       buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
-      language = ""
       launchStyle = "0"
       useCustomWorkingDirectory = "NO"
       ignoresPersistentStateOnLaunch = "NO"
@@ -82,13 +78,11 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "607FACCF1AFB9204008FA782"
-            BuildableName = "PLPaymentGatewayPod_Example.app"
-            BlueprintName = "PLPaymentGatewayPod_Example"
-            ReferencedContainer = "container:PLPaymentGatewayPod.xcodeproj">
+            BuildableName = "PLPaymentGateway_Example.app"
+            BlueprintName = "PLPaymentGateway_Example"
+            ReferencedContainer = "container:PLPaymentGateway.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
-      <AdditionalOptions>
-      </AdditionalOptions>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
@@ -101,9 +95,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "607FACCF1AFB9204008FA782"
-            BuildableName = "PLPaymentGatewayPod_Example.app"
-            BlueprintName = "PLPaymentGatewayPod_Example"
-            ReferencedContainer = "container:PLPaymentGatewayPod.xcodeproj">
+            BuildableName = "PLPaymentGateway_Example.app"
+            BlueprintName = "PLPaymentGateway_Example"
+            ReferencedContainer = "container:PLPaymentGateway.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
