--- a/PLPaymentGateway.xcframework/ios-arm64/PLPaymentGateway.framework/Modules/PLPaymentGateway.swiftmodule/arm64-apple-ios.abi.json
+++ b/PLPaymentGateway.xcframework/ios-arm64/PLPaymentGateway.framework/Modules/PLPaymentGateway.swiftmodule/arm64-apple-ios.abi.json
@@ -3232,6 +3232,13 @@
     },
     {
       "filePath": "\/Users\/hassanayoub\/OfflineProjects\/paylink\/Code\/Mobile\/iOS\/PLPaymentGateway\/Sources\/PLPaymentGateway\/PLInvoiceWebViewController.swift",
+      "kind": "BooleanLiteral",
+      "offset": 3135,
+      "length": 4,
+      "value": "true"
+    },
+    {
+      "filePath": "\/Users\/hassanayoub\/OfflineProjects\/paylink\/Code\/Mobile\/iOS\/PLPaymentGateway\/Sources\/PLPaymentGateway\/PLInvoiceWebViewController.swift",
       "kind": "StringLiteral",
       "offset": 175,
       "length": 26,
